# coitrees

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  LICENSE.md  README.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: labeler.yml  release-python.yml  test.yml
bench/: AIList  AITree  CITree  CITree-cov  NCList  bedtools  bedtools-sorted  bench.jl  cgranges  cgranges-cov  coitrees  coitrees-cov  coitrees-sorted  coitrees-tvt  cov-bench.jl
examples/: bed-intersect.rs
py-coitrees/: Cargo.toml  Makefile  pyproject.toml
py-coitrees/coitrees/: __init__.py  coitrees.py
py-coitrees/src/: lib.rs
py-coitrees/tests/: test_coitrees.py
src/: avx.rs  cobi.c  cobi.h  coitrees.rs  default.rs  interval.rs  lib.rs  main.rs  neon.rs  nosimd.rs
tests/: iteration.rs  nosimd.rs  query.rs
