[package]
name = "coitrees"
description = "A very fast data structure for overlap queries on sets of intervals."
version = "0.2.1"
authors = ["Daniel C. Jones <dcjones@cs.washington.edu>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/dcjones/coitrees"
documentation = "https://docs.rs/coitrees"
readme = "README.md"
license-file = "LICENSE.md"


[profile.release]
lto = true
#debug = true

[dev-dependencies]
rand = "0.8"
fnv = "1.0.7"
libc = "0.2"
clap = {version = "4.1", features = ["derive"]}

[[example]]
name = "bed-intersect"
