[build-system]
requires = ["maturin>=1.2.1,<2"]
build-backend = "maturin"

[project]
name = "coitrees"
description = "Blazingly fast interval tree library"
authors = [
    { name = "Yangyang Li", email = "yangyang.li@northwestern.edu" },
    { name = "Daniel C. Jones", email = "djones3@fredhutch.org" },
]
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
keywords = ["interval tree", "find overlap", "rust", "blazingly fast"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering",
]
