[tool.poetry]
name = "coitrees"
version = "0.3.0"
description = "Blazingly fast interval tree library"
authors = [
    "Yangyang Li <yangyang.li@northwestern.edu>",
    "Daniel C. Jones <djones3@fredhutch.org>",
]

[project]
name = "coitrees"
description = "Blazingly fast interval tree library"
authors = [
    { name = "Yangyang Li", email = "yangyang.li@northwestern.edu" },
    { name = "Daniel C. Jones", email = "djones3@fredhutch.org" },
]
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
keywords = ["interval tree", "find overlap", "rust", "blazingly fast"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering",
]


[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest-sugar = "^0.9.7"
pytest = "^7.4.3"
ruff = "^0.1.3"
ipdb = "^0.13.13"


[project.urls]
homepage = "https://github.com/dcjones/coitrees"
documentation = "https://github.com/dcjones/coitrees"
repository = "https://github.com/dcjones/coitrees"
changelog = "https://github.com/dcjones/coitrees/README.md"

[build-system]
requires = ["maturin>=1.2.1,<2"]
build-backend = "maturin"
