[build-system]
requires = ["maturin>=1.2.1,<2"]
build-backend = "maturin"


[tool.poetry]
name = "coitrees"
version = "0.3.0"
description = "Blazingly fast interval tree library"
authors = [
    "Yangyang Li <yangyang.li@northwestern.edu>",
    "Daniel C. Jones <djones3@fredhutch.org>",
]

[project]
name = "coitrees"
description = "Blazingly fast interval tree library"
authors = [
    { name = "Yangyang Li", email = "yangyang.li@northwestern.edu" },
    { name = "Daniel C. Jones", email = "djones3@fredhutch.org" },
]
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
keywords = ["interval tree", "find overlap", "rust", "blazingly fast"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering",
]


[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest-sugar = "^0.9.7"
pytest = "^7.4.3"
ruff = "^0.1.3"
ipdb = "^0.13.13"


[project.urls]
homepage = "https://github.com/dcjones/coitrees"
documentation = "https://github.com/dcjones/coitrees"
repository = "https://github.com/dcjones/coitrees"
changelog = "https://github.com/dcjones/coitrees/README.md"

[tool.ruff]
target-version = "py38"
line-length = 120
fix = true
fixable = ["ALL"]
select = [
    "ANN",
    "D",
    "A",
    "F",
    "E",
    "W",
    "C90",
    "I",
    "UP",
    "N",
    "YTT",
    "TID",
    "S",
    "BLE",
    "FBT",
    "PLR",
    "B",
    "B9",
    "A",
    "C4",
    "T10",
    "EM",
    "ICN",
    "T20",
    "Q",
    "RET",
    "SIM",
    "ARG",
    "DTZ",
    "ERA",
    "PD",
    "PGH",
    "PLC",
    "PLE",
    "PLW",
    "RUF",
    "PL",
    "TD",
    "FIX",
    "PTH",
    "TCH",
    "SLOT",
    "PT",
    "PYI",
    "PIE",
    "ISC",
    "FA",
    "EXE",
    # "CPY",
    "COM",
]
ignore = [
    "E501",
    "D203",
    "D100",
    "D401",
    "ANN101",
    "ANN102",
    "ANN001",
    "ANN002",
    "ANN003",
    "ANN201",
    "ANN202",
    "ANN204",
    "ANN205",
    "ANN206",
    "PGH003",
    "N802",
    "N803",
    "N806",
    "N815",
    "EM101",
    # formater conflict
    'COM812',
    'COM819',
    'D206',
    'ISC001',
    'Q000',
    'Q001',
    'Q002',
    'Q003',
    'W191',
]
exclude = [
    "tests/*",
    "scripts/*",
    "docs/conf.py",

    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",

]


[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, respect magic trailing commas.
# magic-trailing-comma = "respect"
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.ruff.flake8-bugbear]
extend-immutable-calls = ["typer.Argument", "typer.Option"]

[tool.ruff.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.per-file-ignores]

[tool.ruff.pydocstyle]
convention = 'google'

[tool.coverage.paths]
source = ["coitrees", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["coitrees"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 40
ignore_errors = true

[tool.mypy]
strict = false
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
ignore_missing_imports = true

[tool.pytest.ini_options]
markers = [
    "smoke: a quick smoke test",
    "failing: failing tests",
    "imports: importing tests",
]
